--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1814,8 +1814,8 @@ elseif(WINDOWS)
   file(GLOB SDLMAIN_SOURCES ${SDL2_SOURCE_DIR}/src/main/windows/*.c)
   if(MINGW OR CYGWIN)
     list(APPEND EXTRA_LIBS mingw32)
-    list(APPEND EXTRA_LDFLAGS "-mwindows")
-    list(APPEND SDL_LIBS "-lmingw32" "-mwindows")
+    list(APPEND EXTRA_LDFLAGS "")
+    list(APPEND SDL_LIBS "-lmingw32" "")
     if(NOT SDL2_DISABLE_SDL2MAIN)
       set(SDL_CFLAGS "${SDL_CFLAGS} -Dmain=SDL_main")
       list(APPEND SDL_LIBS "-lSDL2main")
